Update: Add additional specifications and documentation pages, focusing on Featureless Make.
Just like with the previous commit (5d48ca4ffa2fd31c3ae76505c030c5f0735c2c18), this is a quick and rather brute force documentation change set.
I did not focus whatsoever on the styling and I imagine there is a lot of room for improvement.
I will likely only care about improving this once I begin work on the Context Markup Language I plan on writing in the future.

Fix other problems as observed.

--- a/documentation/control/specifications/packet_response.html
+++ b/documentation/control/specifications/packet_response.html
@@ -62,7 +62,7 @@
           <div class="nav-item block">
             <a href="documentation/control.html#parameters-program" class="nav-text link">Program Parameters</a>
           </div>
-          <div class="nav-item block unlink">
+          <div class="nav-item block">
             <div class="nav-text notice">Specifications</div>
             <a href="documentation/control/specifications.html" class="nav-text link">Control</a>
           </div>
@@ -72,8 +72,8 @@
           <div class="nav-item block">
             <a href="documentation/control/specifications/packet_request.html" class="nav-text link">Packet Request</a>
           </div>
-          <div class="nav-item highlight block">
-            <a href="documentation/control/specifications/packet_response.html" class="nav-text link">Packet Response</a>
+          <div class="nav-item block highlight unlink">
+            <div class="nav-text unlink">Packet Response</div>
           </div>
           <div class="nav-item block">
             <div class="nav-text notice">APIs</div>
