--- a/documentation/controller/specifications/exit.html
+++ b/documentation/controller/specifications/exit.html
@@ -7,7 +7,7 @@
 
     <meta charset="UTF-8">
     <meta name="author" content="Kevin Day">
-    <meta name="description" content="Controller program <strong>Exit</strong> specification.">
+    <meta name="description" content="Controller program exit specification.">
     <meta name="keywords" content="Kevin Day, Kevux, FLL, Featureless, Linux, Library, Controller, Open-Source, Specification">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -68,7 +68,7 @@
           <div class="nav-item block">
             <a href="documentation/controller.html#time" class="nav-text link">Time</a>
           </div>
-          <div class="nav-item block unlink">
+          <div class="nav-item block">
             <div class="nav-text notice">Specifications</div>
             <a href="documentation/controller/specifications.html" class="nav-text link">Controller</a>
           </div>
@@ -78,8 +78,8 @@
           <div class="nav-item block">
             <a href="documentation/controller/specifications/entry.html" class="nav-text link">Entry</a>
           </div>
-          <div class="nav-item highlight block">
-            <a href="documentation/controller/specifications/exit.html" class="nav-text link">Exit</a>
+          <div class="nav-item block highlight unlink">
+            <div class="nav-text unlink">Exit</div>
           </div>
           <div class="nav-item block">
             <a href="documentation/controller/specifications/packet.html" class="nav-text link">Packet</a>
