--- a/documentation/controller/specifications/packet.html
+++ b/documentation/controller/specifications/packet.html
@@ -7,7 +7,7 @@
 
     <meta charset="UTF-8">
     <meta name="author" content="Kevin Day">
-    <meta name="description" content="Controller program Packet specification.">
+    <meta name="description" content="Controller program packet specification.">
     <meta name="keywords" content="Kevin Day, Kevux, FLL, Featureless, Linux, Library, Controller, Open-Source, Specification">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -81,8 +81,8 @@
           <div class="nav-item block">
             <a href="documentation/controller/specifications/exit.html" class="nav-text link">Exit</a>
           </div>
-          <div class="nav-item highlight block">
-            <a href="documentation/controller/specifications/packet.html" class="nav-text link">Packet</a>
+          <div class="nav-item block highlight unlink">
+            <div class="nav-text unlink">Packet</div>
           </div>
           <div class="nav-item block">
             <a href="documentation/controller/specifications/rule.html" class="nav-text link">Rule</a>
