--- a/documentation/fake.html
+++ b/documentation/fake.html
@@ -70,6 +70,18 @@
             <a href="documentation/fake/specifications.html" class="nav-text link">Featureless Make</a>
           </div>
           <div class="nav-item block">
+            <a href="documentation/fake/specifications/defines.html" class="nav-text link">Defines</a>
+          </div>
+          <div class="nav-item block">
+            <a href="documentation/fake/specifications/dependencies.html" class="nav-text link">Dependencies</a>
+          </div>
+          <div class="nav-item block">
+            <a href="documentation/fake/specifications/fakefile.html" class="nav-text link">Fakefile</a>
+          </div>
+          <div class="nav-item block">
+            <a href="documentation/fake/specifications/settings.html" class="nav-text link">Settings</a>
+          </div>
+          <div class="nav-item block">
             <div class="nav-text notice">APIs</div>
           </div>
           <div class="nav-item block ellipses">
