--- a/documentation/fake/specifications.html
+++ b/documentation/fake/specifications.html
@@ -70,6 +70,18 @@
             <div class="nav-text unlink">Featureless Make</div>
           </div>
           <div class="nav-item block">
+            <a href="documentation/fake/specifications/defines.html" class="nav-text link">Defines</a>
+          </div>
+          <div class="nav-item block">
+            <a href="documentation/fake/specifications/dependencies.html" class="nav-text link">Dependencies</a>
+          </div>
+          <div class="nav-item block">
+            <a href="documentation/fake/specifications/fakefile.html" class="nav-text link">Fakefile</a>
+          </div>
+          <div class="nav-item block">
+            <a href="documentation/fake/specifications/settings.html" class="nav-text link">Settings</a>
+          </div>
+          <div class="nav-item block">
             <div class="nav-text notice">APIs</div>
           </div>
           <div class="nav-item block ellipses">
@@ -88,8 +100,25 @@
           <div class="main-content">
             <p class="p">
               The <abbr title="Featureless Linux Library">FLL</abbr> project provides several <a href="fll/specifications.html" class="link">specifications</a>.
-              The <strong>Featureless Make</strong> does not use or provide any of these specifications.
             </p>
+            <p class="p">
+              The <strong>Featureless Make</strong> follows the following specifications:
+            </p>
+            <ul>
+              <li><a href="fll/specifications/fss/fss-0000.html" class="link">FSS-0000 (Basic)</a></li>
+              <li><a href="fll/specifications/fss/fss-0001.html" class="link">FSS-0001 (Extended)</a></li>
+              <li><a href="fll/specifications/fss/fss-0005.html" class="link">FSS-0005 (Somewhat Basic List)</a></li>
+              <li><a href="fll/specifications/iki/iki-0002.html" class="link">IKI-0002 (Simple Script)</a></li>
+            </ul>
+            <p class="p">
+              The <strong>Featureless Make</strong> defines the following specifications:
+            </p>
+            <ul>
+              <li><a href="documentation/fake/specifications/defines.html" class="link">Defines</a></li>
+              <li><a href="documentation/fake/specifications/dependencies.html" class="link">Dependencies</a></li>
+              <li><a href="documentation/fake/specifications/fakefile.html" class="link">Fakefile</a></li>
+              <li><a href="documentation/fake/specifications/settings.html" class="link">Settings</a></li>
+            </ul>
           </div>
         </main>
       </div>
