--- a/documentation/fss_embedded_list_read/specifications.html
+++ b/documentation/fss_embedded_list_read/specifications.html
@@ -85,7 +85,7 @@
           <div class="main-content">
             <p class="p">
               The <abbr title="Featureless Linux Library">FLL</abbr> project provides several <a href="fll/specifications.html" class="link">specifications</a>.
-              The <strong>FSS Embedded List Read</strong> does not use or provide any of these specifications.
+              The <strong>FSS Embedded List Read</strong> does not directly use or provide any of these specifications.
             </p>
           </div>
         </main>
