--- a/fll/specifications/iki/iki-0002.html
+++ b/fll/specifications/iki/iki-0002.html
@@ -91,7 +91,7 @@
                 Flexibility on interpretation is intended so that the context can be more fine-tuned and customized.
               </p>
               <p>
-                The taxonomy for the emphasis:"context", emphasis:"define", and emphasis:"parameter" are intentionally not defined here and left open.
+                The taxonomy for the <em>context</em>, <em>define</em>, and <em>parameter</em> are intentionally not defined here and left open.
                 One utilizing this should document the taxonomy for each of these as desired.
               </p>
               <p>
