--- a/documentation/control/specifications/packet_request.html
+++ b/documentation/control/specifications/packet_request.html
@@ -62,15 +62,15 @@
           <div class="nav-item block">
             <a href="documentation/control.html#parameters-program" class="nav-text link">Program Parameters</a>
           </div>
-          <div class="nav-item block unlink">
+          <div class="nav-item block">
             <div class="nav-text notice">Specifications</div>
             <a href="documentation/control/specifications.html" class="nav-text link">Control</a>
           </div>
           <div class="nav-item block">
             <a href="documentation/control/specifications/settings.html" class="nav-text link">Settings</a>
           </div>
-          <div class="nav-item highlight block">
-            <a href="documentation/control/specifications/packet_request.html" class="nav-text link">Packet Request</a>
+          <div class="nav-item block highlight unlink">
+            <div class="nav-text unlink">Packet Request</div>
           </div>
           <div class="nav-item block">
             <a href="documentation/control/specifications/packet_response.html" class="nav-text link">Packet Response</a>
