Bugfix: Access Denied and Not Found pages have problems.
The base href should be "".
Fix a grammar mistake.
Add author and description.
Fix the canonical path.
Change the side navigation links.

--- a/access_denied.html
+++ b/access_denied.html
@@ -3,9 +3,11 @@
   <head>
     <title>Kevux Systems and Software - Access Denied (403)</title>
 
-    <base href="/">
+    <base href="">
 
     <meta charset="UTF-8">
+    <meta name="author" content="Kevin Day">
+    <meta name="description" content="Access is denied.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link type="text/css" rel="stylesheet" media="all" href="css/kevux.css">
@@ -20,12 +22,13 @@
     <link type="text/css" rel="stylesheet" media="only print and (orientation:landscape)" href="css/kevux-print-landscape.css">
     <link type="text/css" rel="stylesheet" media="only print and (orientation:portrait)" href="css/kevux-print-portrait.css">
 
+    <link rel="canonical" href="access_denied.html">
     <link type="image/x-icon" rel="icon" href="images/kevux.ico">
     <link type="image/x-icon" rel="shortcut" href="images/kevux.ico">
     <link type="text/html" rel="license" href="licenses.html">
   </head>
 
-  <body id="kevux" class="kevux no-js">
+  <body id="kevux" class="kevux no-js licenses">
     <div role="banner" class="header-block">
       <header class="header-section header">
         <div class="header-site">Kevux Systems and Software</div>
@@ -45,23 +48,22 @@
     <div class="content-block">
       <div id="nav-expanded" class="nav-block">
         <nav id="kevux-document-nav" class="nav-menu">
-          <div class="nav-item block back">
-            <a href="news.html" class="nav-text link back">News</a>
+          <div class="nav-item block">
+            <a href="index.html" class="nav-text link">Site Index</a>
           </div>
-          <div class="nav-item block back">
-            <a href="distributions.html" class="nav-text link back">Distributions</a>
-          </div>
-          <div class="nav-item block back">
-            <a href="fll.html" class="nav-text link back">FLL</a>
-          </div>
-          <div class="nav-item block back">
-            <a href="projects.html" class="nav-text link back">Projects</a>
-          </div>
-          <div class="nav-item block back">
-            <a href="documentation.html" class="nav-text link back">Documentation</a>
-          </div>
-          <div class="nav-item block back">
+          <div class="nav-item block">
+            <div class="nav-text notice">Other Content</div>
             <a href="licenses.html" class="nav-text link">Licenses</a>
+          </div>
+          <div class="nav-item block">
+            <a href="sources.html" class="nav-text link">Source Code</a>
+          </div>
+          <div class="nav-item block">
+            <a href="webbing.html" class="nav-text link">Webbing</a>
+          </div>
+          <div class="nav-item block ellipses">
+            <a href="access_denied.html#nav-expanded" class="nav-text link open" title="Expand Menu">…</a>
+            <a href="access_denied.html" class="nav-text link close">Collapse Menu</a>
           </div>
         </nav>
       </div>
@@ -74,7 +76,7 @@
 
           <div class="main-content">
             <p class="p">
-              You are not authorized to access this page whether it exists or not. Please go back or <a href="index.html" class="nav-text link">consider visiting to the site index page</a>.
+              You are not authorized to access this page whether it exists or not. Please go back or <a href="index.html" class="nav-text link">consider visiting the site index page</a>.
             </p>
           </div>
         </main>
