Bugfix: Remove licenses class that should only be on the licenses.html page.

--- a/access_denied.html
+++ b/access_denied.html
@@ -28,7 +28,7 @@
     <link type="text/html" rel="license" href="licenses.html">
   </head>
 
-  <body id="kevux" class="kevux no-js licenses">
+  <body id="kevux" class="kevux no-js">
     <div role="banner" class="header-block">
       <header class="header-section header">
         <div class="header-site">Kevux Systems and Software</div>
