Revert: Base HREF changes for special files.
I completely forgot about this commit: d5a8c61818e1ba72da14003a41b10a3b0971d81c.

It seems that the base path must be "/" for these special files due to how they are served from the ".htaccess" conditions.

--- a/server_error.html
+++ b/server_error.html
@@ -3,7 +3,7 @@
   <head>
     <title>Kevux Systems and Software - Server Error (500)</title>
 
-    <base href="">
+    <base href="/">
 
     <meta charset="UTF-8">
     <meta name="author" content="Kevin Day">
