--- a/access_denied.html
+++ b/access_denied.html
@@ -3,7 +3,7 @@
   <head>
     <title>Kevux Systems and Software - Access Denied (403)</title>
 
-    <base href="">
+    <base href="/">
 
     <meta charset="UTF-8">
     <meta name="author" content="Kevin Day">
