--- a/not_found.html
+++ b/not_found.html
@@ -3,7 +3,7 @@
   <head>
     <title>Kevux Systems and Software - Page Not Found (404)</title>
 
-    <base href="">
+    <base href="/">
 
     <meta charset="UTF-8">
     <meta name="author" content="Kevin Day">
