Update: Add musl-libc to webbing.

--- a/webbing.html
+++ b/webbing.html
@@ -65,6 +65,9 @@
           <div class="nav-item block">
             <a href="webbing.html#suckless" class="nav-text link">Software that Sucks Less</a>
           </div>
+          <div class="nav-item block">
+            <a href="webbing.html#musl_libc" class="nav-text link">Musl Libc</a>
+          </div>
           <div class="nav-item block ellipses">
             <a href="webbing.html#nav-expanded" class="nav-text link open" title="Expand Menu">…</a>
             <a href="webbing.html" class="nav-text link close">Collapse Menu</a>
@@ -150,6 +153,25 @@
                 The ideas behind <strong>Software that Sucks Less</strong> are very similar to the <em>Kevux Software</em>, such as the <em>Featureless Linux Library</em>.
                 There are slight, but significant differences.
                 Expect the <em>Kevux Software</em> to be slightly more complex.
+              </p>
+            </div>
+          </article>
+
+          <article id="musl_libc" class="article">
+            <header class="article-header header separate">
+              <h2 class="article-title h h2">Musl Libc</h2>
+            </header>
+
+            <div class="article-content">
+              <p class="p">
+                <strong><abbr title="Uniform Resource Locator">URL</abbr></strong>: <a href="https://musl.libc.org/" class="link external">https://musl.libc.org/</a>.
+              </p>
+              <p class="p">
+                Provides an implementation of the standard <em>libc</em>.
+                This is considered, by Kevin Day, to be one of the better designed <em>libc</em> implementations out there.
+              </p>
+              <p class="p">
+                Consider using this <strong>Musl Libc</strong> over the more popular <em>GNU C Library</em> found at <a href="https://www.gnu.org/software/libc/" class="link external">https://www.gnu.org/software/libc/</a>.
               </p>
             </div>
           </article>
