Update: Expand upon note about individual program specifications.

--- a/documentation.html
+++ b/documentation.html
@@ -185,7 +185,7 @@
               </p>
               <p class="p">
                 There are two major groups of specifications, the <a href="fll/specifications.html#fss" class="link">Featureless Settings Specifications</a> and the <a href="fll/specifications.html#iki" class="link">IKI Specifications</a>.
-                Individual program projects may also have their own specifications. Each pogram has a specifications page that describes the specifications, if any, that are defined by that project.
+                Individual program projects may also have their own specifications. Each pogram has a specifications page that describes the specifications, if any, that are defined by that project. The <strong>Featureless Make</strong> is <a href="documentation/fake/specifications.html" class="link">a good example of program specific specifications</a>.
               </p>
               <p class="p">
                 Many of these specifications may also be found in the source code repositories:
