Update: News - 2022 / 07 / 31 - FLL 0.6.0 Stable Release

--- a/news.html
+++ b/news.html
@@ -51,6 +51,10 @@
       <div id="nav-expanded" class="nav-block">
         <nav id="kevux-document-nav" class="nav-menu">
           <div class="nav-item block">
+            <div class="nav-text notice">2022 / 07 / 31</div>
+            <a href="news/2022_07_31-fll_0_6_0_release.html" class="nav-text link">FLL 0.6.0 Release</a>
+          </div>
+          <div class="nav-item block">
             <div class="nav-text notice">2022 / 07 / 02</div>
             <a href="news/2022_07_02-fll_0_5_10_release.html" class="nav-text link">FLL 0.5.10 Release</a>
           </div>
@@ -93,12 +97,47 @@
             <h1 class="section-title h h1">News</h1>
           </header>
 
-          <article class="article">
+          <article id="2022_07_31-fll_0_6_0_release" class="article">
             <header class="article-header header">
+              <h2 class="article-title h h2">2022 / 07 / 31 - FLL 0.6.0 Release</h2>
+            </header>
+
+            <div class="article-content">
+              <p class="p">
+                The Featureless Linux Library stable version 0.6.0 is released.
+              </p>
+              <p class="p">
+                The <strong>controller</strong> program is a re-interpretation of the <strong>Featureless Make</strong> program written in a more generalized fashion that is focused on performing a set of tasks.
+                This is very similar to a system initialize program such as <em>sysvinit</em>.
+                Support for running as a system initialize replacement is partially complete.
+                There is currently no way to send messages to the <strong>controller</strong> program to start and stop anything.
+                The <strong>control</strong> program, which is used to communicate to the <strong>controller</strong> program is also incomplete.
+                The next <abbr title="Featureless Linux Library">FLL</abbr> development version, the 0.7.0 series, will heavily focused on network protocols.
+              </p>
+              <p class="p">
+                The <strong>utf8</strong> program is a handy tool to convert from <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> characters to their Unicode value or vice-versa.
+                This can convert entire files.
+              </p>
+              <p class="p">
+                <strong>Featureless Make</strong> has some major changes.
+                The <strong>fake</strong> program now accepts piped data, which must be a valid <em>fakefile</em>.
+                There are new Objects available for the <a href="documentation/fake/specifications/settings.html" class="link">build settings</a> and the <a href="documentation/fake/specifications/fakefile.html" class="link">fakefile</a>.
+              </p>
+              <p class="p">
+                Check out the project on the <a href="fll.html#release" class="link"><abbr title="Featureless Linux Library">FLL</abbr> release</a> page.
+              </p>
+              <p class="p">
+                <a href="news/2022_07_31-fll_0_6_0_release.html" class="content link">Continue reading…</a>
+              </p>
+            </div>
+          </article>
+
+          <article id="2022_06_04-librem_to_freedom" class="article">
+            <header class="article-header header separate">
               <h2 class="article-title h h2">2022 / 07 / 02 - FLL 0.5.10 Release</h2>
             </header>
 
-            <div class="article-content" id="2022_06_04-librem_to_freedom">
+            <div class="article-content">
               <p class="p">
                 The Featureless Linux Library development version 0.5.10 is released.
               </p>
@@ -127,12 +166,12 @@
             </div>
           </article>
 
-          <article class="article">
+          <article id="2022_06_04-librem_to_freedom" class="article">
             <header class="article-header header separate">
               <h2 class="article-title h h2">2022 / 06 / 04 - Librem to Freedom</h2>
             </header>
 
-            <div class="article-content" id="2022_06_04-librem_to_freedom">
+            <div class="article-content">
               <img src="images/news/2022_06_04/00-side_by_side-400.png" alt="OpenMoko FreeRuner, Ubuntu Aquaris E4.5, Pinephone Postmarket Edition, and Librem5 phones." title="Linux phones." class="image content title">
               <p class="p">
                 I am a hacker, a tinkerer, one who likes to modify things into what I desire. I don't want somebody to do anything for me. I want to do anything for myself. While this does not mean I want to do everything, this does mean that want I want to do, I am the one to do it. In this case, I want to tweak and configure and use my phone as I see fit. Open-source gives me the opportunity to review, vet, and configure my computers as I see fit. Liberty such as this is the air that fills my lungs as I sleep at night, dreaming.
@@ -152,7 +191,7 @@
             </div>
           </article>
 
-          <article class="article" id="2022_05_16-fll_specifications_added">
+          <article id="2022_05_16-fll_specifications_added" class="article">
             <header class="article-header header separate">
               <h2 class="article-title h h2">2022 / 06 / 04 - Librem to Freedom</h2>
             </header>
@@ -188,7 +227,7 @@
             </div>
           </article>
 
-          <article class="article" id="2022_05_01-website_redesign">
+          <article id="2022_05_01-website_redesign" class="article">
             <header class="article-header header separate">
               <h2 class="article-title h h2">2022 / 05 / 01 - Website Redesign</h2>
             </header>
